--- a/styles.css
+++ b/styles.css
@@ -7,35 +7,52 @@
 .dice {
   text-align: center;
   display: inline-block;
-
 }
 
 body {
-  background-color: #393E46;
+  background-color: #393e46;
 }
 
 h1 {
   margin: 30px;
-  font-family: 'Lobster', cursive;
+  font-family: "Lobster", cursive;
   text-shadow: 5px 0 #232931;
   font-size: 8rem;
-  color: #4ECCA3;
+  color: #4ecca3;
 }
 
 p {
   font-size: 2rem;
-  color: #4ECCA3;
-  font-family: 'Indie Flower', cursive;
+  color: #4ecca3;
+  font-family: "Indie Flower", cursive;
 }
 
 img {
   width: 80%;
 }
 
+.btn {
+  background-color: #393e46;
+  color: #fff;
+  height: 40px;
+  width: 140px;
+  border: 1px solid white;
+  border-radius: 5px;
+  position: relative;
+  top: 20px;
+  cursor: pointer;
+}
+
 footer {
   margin-top: 5%;
-  color: #EEEEEE;
   text-align: center;
-  font-family: 'Indie Flower', cursive;
-
+  font-family: "Indie Flower", cursive;
+}
+footer a {
+  text-decoration: none;
+  color: #eeeeee;
+}
+.linkedin-icon {
+  height: 16px;
+  width: 16px;
 }
